--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -656,12 +656,18 @@ footer {
 
     .wave {
         img {
-            width: 120%;
+            width: 60%;
             position: absolute;
-            top: 0;
-            left: 0;
-            margin-top: -43px;
-            margin-left: -10px;
+            transform: translateY(-60%);
+
+            &:first-child {
+                left: 0;
+                margin-left: -10px;
+            }
+
+            &:nth-child(2) {
+                right: -20;
+            }
         }
     }
 
